--- a/howitworks.html
+++ b/howitworks.html
@@ -8,6 +8,51 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="about"> 
+
+    <div class="ourstory">
+        <h1 class ="story">Our Story</h1>
+        <p class="missionp">Mama Groce started in 2020 as small kiosk in the outcasts of Nairobi<br>
+        We stared off selling goods to the local community .Despite the challenges we  faced<br>
+        We were  able to proivide the best service to our  customers which made us <br>
+        grow to where we are today.Mama groce has grown to an online shopping base<br>
+        where customers can  easily order and buy quality products at affordable prices.<br>
+        We are  pleased with what we  have accomplished and appreciative of the <br>
+        friendship and support of the partners and customers' loyalty.<br>
+        our aim remains providing good quality products to our customers <br>
+        and remain to expanf our service .
+        </p>
+    </div>
+ <div class="ourmission">
+     <div>
+         <img src="imagess/vegetables3.jpg" alt="" class="veges">
+     </div>
+     <div class="mission">
+<h1 class="our">Our mission</h1>
+<p class="fresh">Provide Fresh quality Products</p>
+<p class="missionp">At Mama Groce, we provide fresh, high-quality<br>
+ produce to our customers at affordable prices, who are our first<br>
+ priority.We believe that everyone deserves access to fresh,healthy<br>
+ food. Through our service, we aim to promote food security,reduce food<br>
+ waste, and contribute to the local economy.We are passionate in serving <br>
+ our customers with excellence and integrity and to making a positive impact<br>
+ on the communities we serve.</p>
+     </div>
+ </div>  
+ <div class="vision">
+ <div class="ourvision">
+  <h1 class="ourv">Our Vision</h1><br>
+   <p class="missionv"> Leading Provider Of Fresh Foods.</p>
+   <p class="missionp">We also think that through improving access to and affordability<br>
+    of fresh, nutritious food, our work may benefit the health and wellbeing<br>
+    of our communities. We are dedicated to upholding our core principles of<br>
+    integrity, excellence, and community as we expand our serevices<br>
+    in the local food system.</p>
+    </div>
+    <div><img src="imagess/fruit2.png" class="fruit"></div>
+</div>   
+
+</div>  
     <!---features--->
     <section id="features">
       <div class="feat-text">
